deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: prod
  labels:
    app.kubernetes.io/name: counter-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: counter-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
